# clearedforpush

./: .gitignore  ARCHITECTURE.md  BEFORE_AFTER_UI.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DEMO.md  DEVELOPMENT.md  FEATURE_IDEAS.md  FEATURE_ROADMAP.md  GETTING_STARTED.md  GROWTH_STRATEGY.md  HANDOFF.md  LAUNCH_CHECKLIST.md  LICENSE-APACHE  LICENSE-MIT  MONETIZATION_OPTIONS.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  README.md  START_HERE.md  STATS_FEATURE.md  STATS_IMPLEMENTATION_COMPLETE.md  TASK_0_COMPLETE.md  TASK_0_RESULTS.md  TASK_0_VERIFICATION.md  TEST_UI.md  TODO.md  UI_EXAMPLES.md  UI_IMPLEMENTATION_GUIDE.md  UI_SUMMARY.md  VISUAL_GUIDE.md  cliff.toml
.github/workflows/: ci.yml  release.yml
pkg/aur/: PKGBUILD
pkg/homebrew/: clearedforpush.rb  preflight.rb
scripts/: release.sh  verify_merge_tree.sh
src/: config.rs  conflict_checker.rs  git.rs  github.rs  hooks.rs  main.rs  output.rs  ui.rs
