[package]
name = "clearedforpush"
version = "0.1.0"
edition = "2021"
authors = ["Cleared for Push Contributors"]
description = "Pre-push merge conflict predictor"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/clearedforpush"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
colored = "2.1"
atty = "0.2"
